tests/types/errors/arg_type_mismatch.mochi
fun square(n: int): int {
  return n * n
}

square("hi")
